welcome.lessons.welcome.summative.Moria.scala.code
retourne()
while (!estSurBiscuit){
  avance()
}
prendBiscuit()
setDirection(Direction.WEST)
while (!estSurBiscuit){
  avance()
}
recule()
poseBiscuit()
